feat(api): add PATCH endpoint to toggle vehicle type active status
- Add patchStatus(UUID id, boolean active) in SettingsVehicleTypeService
- Add PATCH /api/v1/configuration/vehicle-types/{id}/status with
  @PreAuthorize('configuracion:editar') for frontend toggle